crates/ars-components/src/date_time/date_range_picker/snapshots/ars_components__date_time__date_range_picker__tests__snapshot_content.snap
---
source: crates/ars-components/src/date_time/date_range_picker/tests.rs
expression: snapshot_attrs(&api.content_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "content",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "date-range-picker",
            ),
        ),
        (
            Aria(
                LabelledBy,
            ),
            String(
                "trip-label",
            ),
        ),
        (
            Aria(
                Modal,
            ),
            String(
                "false",
            ),
        ),
        (
            Id,
            String(
                "trip-content",
            ),
        ),
        (
            Role,
            String(
                "dialog",
            ),
        ),
    ],
    styles: [],
}
